--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  SIMPLETEST_DB: "mysql://root:root@127.0.0.1/{project-name}"
+  SIMPLETEST_DB: "mysql://root:root@127.0.0.1/__PROJECT_MACHINE_NAME__"
 
 stages:
   - build
@@ -23,10 +23,10 @@ Install-ConfigImport-PHPUnit:
     - composer --verbose install
     - sh scripts/tests/post-install.sh
     - cd web
-    #- ./../vendor/bin/drush sql-drop --verbose --yes --db-url=$SIMPLETEST_DB
-    #- ./../vendor/bin/drush site-install narrowscape --verbose --yes --db-url=$SIMPLETEST_DB
-    #- ./../vendor/bin/drush config-import --verbose --yes --db-url=$SIMPLETEST_DB
-    #- ./../vendor/bin/phpunit -c core --exclude-group Composer
+    - ./../vendor/bin/drush sql-drop --verbose --yes --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/drush site-install __PROJECT_MACHINE_NAME__ --verbose --yes --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/drush config-import --verbose --yes --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/phpunit -c core --exclude-group Composer
     - ./../vendor/bin/drush
     - ./../vendor/bin/console
 
