--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/block.block.pagetitle_2.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/block.block.pagetitle_2.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - woepwoep_theme
+    - __PROJECT_MACHINE_NAME___theme
 id: pagetitle_2
-theme: woepwoep_theme
+theme: __PROJECT_MACHINE_NAME___theme
 region: header
 weight: -3
 provider: null
