--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/block.block.primaryadminactions.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/block.block.primaryadminactions.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - woepwoep_theme
+    - __PROJECT_MACHINE_NAME___theme
 id: primaryadminactions
-theme: woepwoep_theme
+theme: __PROJECT_MACHINE_NAME___theme
 region: content
 weight: -1
 provider: null
