--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/core.extension.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/core.extension.yml
@@ -35,6 +35,7 @@ module:
   views: 10
   __PROJECT_MACHINE_NAME__: 1000
 theme:
+  stable: 0
   classy: 0
   seven: 0
   __PROJECT_MACHINE_NAME___theme: 0
