--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.block_content.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.block_content.yml
@@ -469,7 +469,8 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -493,4 +494,5 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
