--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.files.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.files.yml
@@ -724,7 +724,8 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -760,7 +761,8 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   page_2:
     display_plugin: page
     id: page_2
@@ -1116,4 +1118,5 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
