--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.archive.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.archive.yml
@@ -175,7 +175,8 @@ display:
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: -1
+      tags: {  }
   block_1:
     id: block_1
     display_title: Block
@@ -213,7 +214,8 @@ display:
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: -1
+      tags: {  }
   page_1:
     id: page_1
     display_title: Page
@@ -232,4 +234,5 @@ display:
         - url.query_args
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: -1
+      tags: {  }
