--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.content.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.content.yml
@@ -569,7 +569,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   page_1:
     display_options:
       path: admin/content/node
@@ -600,4 +601,5 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
