--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.content_recent.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.content_recent.yml
@@ -297,7 +297,8 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   block_1:
     display_plugin: block
     id: block_1
@@ -312,4 +313,5 @@ display:
         - user
         - 'user.node_grants:view'
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
