--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.user_admin_people.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.user_admin_people.yml
@@ -876,7 +876,8 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -908,4 +909,5 @@ display:
         - url
         - url.query_args
         - user.permissions
-      cacheable: false
+      max-age: 0
+      tags: {  }
