--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.who_s_online.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/views.view.who_s_online.yml
@@ -200,7 +200,8 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      cacheable: false
+      max-age: -1
+      tags: {  }
   who_s_online_block:
     display_plugin: block
     id: who_s_online_block
@@ -215,4 +216,5 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - user.permissions
-      cacheable: false
+      max-age: -1
+      tags: {  }
