--- a/scripts/multi-site_builder/sites_config.json
+++ b/scripts/multi-site_builder/sites_config.json
@@ -1,42 +1,16 @@
 {
   "sites": {
-    "test1": {
-      "profile": "dr8",
-      "database": "example_1",
-      "username": "boss",
-      "password": "boss",
-      "host": "localhost",
+    "__PROJECT_MACHINE_NAME__": {
+      "profile": "__PROJECT_MACHINE_NAME__",
+      "database": "db_name",
+      "username": "db_username",
+      "password": "db_pass",
+      "host": "db_host",
       "driver": "mysql",
-      "site_name": "example_1",
+      "site_name": "__PROJECT_HUMAN_NAME__",
       "domains": [
-        "ex1.web.destination.dr8.vdmi",
+        "web.__PROJECT_MACHINE_NAME__.vdmi",
         "ex2.web.destination.dr8.vdmi"
-      ]
-    },
-    "test2": {
-      "profile": "dr8",
-      "database": "example_2",
-      "username": "boss",
-      "password": "boss",
-      "host": "localhost",
-      "driver": "mysql",
-      "site_name": "example_2",
-      "domains": [
-        "exa1.web.destination.dr8.vdmi",
-        "exa2.web.destination.dr8.vdmi"
-      ]
-    },
-    "test3": {
-      "profile": "dr8",
-      "database": "example_3",
-      "username": "boss",
-      "password": "boss",
-      "host": "localhost",
-      "driver": "mysql",
-      "site_name": "example_3",
-      "domains": [
-        "exam1.web.destination.dr8.vdmi",
-        "exam2.web.destination.dr8.vdmi"
       ]
     }
   }
