--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,32 +1,39 @@
 variables:
-  SIMPLETEST_DB: "mysql://root:root@127.0.0.1/__PROJECT_MACHINE_NAME__"
+  MYSQL_ROOT_PASSWORD: "root"
+  SIMPLETEST_DB: "mysql://root:root@mysql/__PROJECT_MACHINE_NAME__"
+  PHP_OPTIONS: "-d sendmail_path=/bin/true -d xdebug.max_nesting_level=256"
 
 stages:
   - build
   - test
 
 before_script:
+  - mkdir -p /cache/drush
+  - ln -s /cache/drush ~/.drush
+  - composer config --global github-oauth.github.com f6a5b05b8aaaea0cf253c9eb042d30c2d392d80b
+  - composer config --global cache-dir /cache/composer
   - composer --version
+  - mysql --version
 
 Composer:
   stage: build
   tags:
-    - drupal
+    - docker
   script:
-    - composer --verbose install
+    - composer install --verbose
 
 Install-ConfigImport-PHPUnit:
   stage: test
   tags:
-    - drupal
+    - docker
+  services:
+  - mysql:5.5
   script:
     - composer --verbose install
     - sh scripts/tests/post-install.sh
     - cd web
-    - ./../vendor/bin/drush sql-drop --verbose --yes --db-url=$SIMPLETEST_DB
-    - ./../vendor/bin/drush site-install __PROJECT_MACHINE_NAME__ --verbose --yes --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/drush sql-create --yes --db-su=root --db-su-pw=root --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/drush site-install narrowscape --verbose --yes --db-url=$SIMPLETEST_DB
     - ./../vendor/bin/drush config-import --verbose --yes --db-url=$SIMPLETEST_DB
     - ./../vendor/bin/phpunit -c core --exclude-group Composer
-    - ./../vendor/bin/drush
-    - ./../vendor/bin/console
 
