--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,6 @@ Install-ConfigImport-PHPUnit:
     - sh scripts/tests/post-install.sh
     - cd web
     - ./../vendor/bin/drush sql-create --yes --db-su=root --db-su-pw=root --db-url=$SIMPLETEST_DB
-    - ./../vendor/bin/drush site-install narrowscape --verbose --yes --db-url=$SIMPLETEST_DB
+    - ./../vendor/bin/drush site-install __PROJECT_MACHINE_NAME__ --verbose --yes --db-url=$SIMPLETEST_DB
     - ./../vendor/bin/drush config-import --verbose --yes --db-url=$SIMPLETEST_DB
 
