--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "preferred-install" : "dist",
     "scripts": {
         "post-install-cmd": "scripts/composer/post-install.sh",
         "post-create-project-cmd": "DrupalSkeletonInstaller::install"
