--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "VDMi-Composer/D8-Skeleton",
+    "name": "vdmi/d8-skeleton",
     "description": "VDMi Project Skeleton for Drupal 8 projects with composer",
     "type": "project",
     "license": "GPL-2.0+",
