Change default site mail

--- a/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/system.site.yml
+++ b/web/profiles/__PROJECT_MACHINE_NAME__/config/sync/system.site.yml
@@ -1,6 +1,6 @@
 uuid: ffac9c12-4a7d-4565-a53e-62ca6fcb4e77
 name: __PROJECT_HUMAN_NAME__
-mail: info+__PROJECT_MACHINE_NAME__@vdmi.nl
+mail: info+__PROJECT_MACHINE_NAME__@example.com
 slogan: ''
 page:
   403: ''
